--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@ body{
     place-items: center;
     height: 100vh;
     overflow: hidden;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: #e6e7ee;
 }
 .content{
     width: 90%;
+    box-shadow:  7px 7px 7px #bebebe,
+    -7px -7px 7px #f4f4f4;
+    padding: 2rem 2rem;
 }
 .play{
-    border: 2px solid red;
     display: flex;
     justify-content: space-between;
     height: 5rem;
@@ -19,14 +21,36 @@ body{
 .play div{
     width: 40%;
     padding: 10px;
-    margin: 3px;
     display: flex;
+    gap: 1rem;
 }
 .circle{
     width: 3rem;
     height: 3rem;
     border-radius: 100%;
-    background-color: black;
-    border: 2px solid whitesmoke;
-
+    background-color: #e6e7ee;
+    box-shadow:  7px 7px 7px #d2d2d2,
+    -7px -7px 7px #ffffff;
+    
+}
+.events{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 1rem;
+}
+.events button{
+    text-align: center;
+    height: 3rem;
+    border-radius: 8px;
+    background-color: #e6e7ee;
+    font-weight: 600;
+    padding: 0.3rem 1.5rem ;
+    border: none;
+    box-shadow:  7px 7px 7px #d2d2d2,
+    -7px -7px 7px #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.events button:hover{
+    box-shadow:  inset  7px 7px 7px #d2d2d2,
+    inset  -7px -7px 7px white;
 }
